tests/should-fail/type-error/no-leaks.fk
interface Eff = bang : Unit

data Bar = One {Int -> Int}

-- type error: Eff not declared in peg but f:{Int -> [Eff]Int} is applied
apply : Bar -> Int -> [Eff]Int
apply (One f) x = f x

main : [Eff]Int
main! = apply (One {x -> x+1}) 0
